Updated to java 16 for testing purposes